--- a/modules/geospatial-toolkit/Dockerfile
+++ b/modules/geospatial-toolkit/Dockerfile
@@ -38,8 +38,8 @@ RUN chmod u+x /script/init_gpu.sh && sync && /script/init_gpu.sh
 ADD modules/${MODULE_NAME}/script/init_python_packages.sh /script/
 RUN chmod u+x /script/init_python_packages.sh && sync && /script/init_python_packages.sh
 
-ADD modules/${MODULE_NAME}/script/init_r_packages.sh /script/
-RUN chmod u+x /script/init_r_packages.sh && sync && /script/init_r_packages.sh
+# ADD modules/${MODULE_NAME}/script/init_r_packages.sh /script/
+# RUN chmod u+x /script/init_r_packages.sh && sync && /script/init_r_packages.sh
 
 ADD modules/${MODULE_NAME}/script/init_biota.sh /script/
 RUN chmod u+x /script/init_biota.sh && sync && /script/init_biota.sh
