--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-    "name": "sepal",
-    "version": "1.0.0",
-    "description": "",
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@eslint/js": "^9.3.0",
-        "eslint": "^8",
-        "eslint-plugin-jest": "^28.5.0",
-        "globals": "^15.3.0",
-        "jest": "^29.7.0",
-        "jest-expect-message": "^1.1.3"
-    }
+  "name": "dev-env",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "ansi": "^0.3.1",
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^9.3.0"
+  }
 }
+
